--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,8 @@ version = "0.1.0"
 authors = ["Wim Looman <wim@nemo157.com>"]
 
 [dependencies]
-ipfs-client = { git = "https://github.com/Nemo157/ipfs-client-rs" }
-futures = "0.1.2"
-tokio-core = "0.1.0"
 clap = { git = "https://github.com/kbknapp/clap-rs" }
+futures = "0.1.2"
+ipfs-client = { git = "https://github.com/Nemo157/ipfs-client-rs" }
+multiaddr = { git = "https://github.com/Nemo157/multiaddr-rs" }
+tokio-core = "0.1.0"
