Back to publish clap crate

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["Wim Looman <wim@nemo157.com>"]
 
 [dependencies]
 base58 = { git = "https://github.com/Nemo157/base58-rs" }
-clap = { git = "https://github.com/kbknapp/clap-rs" }
+clap = "2.16.4"
 futures = "0.1.2"
 ipfs-client = { git = "https://github.com/Nemo157/ipfs-client-rs" }
 multiaddr = { git = "https://github.com/Nemo157/multiaddr-rs" }
